[gd_scene load_steps=8 format=3 uid="uid://d2dmpdkwld53"]

[ext_resource type="Script" path="res://World/gem.gd" id="1_nlp10"]
[ext_resource type="Texture2D" uid="uid://bjmx8lngg30lm" path="res://World/gem.png" id="1_odx68"]
[ext_resource type="AudioStream" uid="uid://c5kjqxqqgw8vk" path="res://Sounds/collect.wav" id="3_xoow2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d3vkj"]
radius = 8.0

[sub_resource type="Animation" id="Animation_cub5j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_yjenl"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, -3), Vector2(0, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q8n3m"]
_data = {
"RESET": SubResource("Animation_cub5j"),
"idle": SubResource("Animation_yjenl")
}

[node name="Gem" type="Area2D"]
collision_layer = 32
collision_mask = 2
script = ExtResource("1_nlp10")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_d3vkj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_odx68")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q8n3m")
}

[node name="Collect_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xoow2")
bus = &"Sfx"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="Collect_Sound" to="." method="_on_collect_sound_finished"]
